@@ -1,3 +1,6 @@
+2010-02-10  Roland Clobus <rclobus@rclobus.nl>
+	* getVersions.sh: Update for many distributors
+
 2010-01-10  Roland Clobus <rclobus@bigfoot.com>
 	* pioneers.nsi.in: Update the Windows installer to include all DLLs.
 	* Makefile.am: Invoke indent twice to fix unstable reindents.
